--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python = "^3.11"
 pandas = "^1.5.3"
 notebook = "^6.5.2"
 openai = "^0.27.2"
+plotly = "^5.13.1"
+chart-studio = "^1.1.0"
+ipywidgets = "^8.0.6"
 
 
 [build-system]
