--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ openai = "^0.27.2"
 plotly = "^5.13.1"
 chart-studio = "^1.1.0"
 ipywidgets = "^8.0.6"
+gensim = "^4.3.1"
+pyldavis = "^3.4.0"
 
 
 [build-system]
