--- a/TextSentimentBot/package.json
+++ b/TextSentimentBot/package.json
@@ -15,6 +15,9 @@
     "@line/bot-sdk": "^7.5.2",
     "axios": "^1.4.0",
     "config": "^3.3.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "stream": "^0.0.2"
   }
 }
